Updates from Overleaf

--- a/metric-learn-jmlr.bib
+++ b/metric-learn-jmlr.bib
@@ -1,17 +1,3 @@
-@inproceedings{Schultz2003a,
-	Author = {Matthew Schultz and Thorsten Joachims},
-	Booktitle = {NIPS},
-	Title = {{L}earning a {D}istance {M}etric from {R}elative {C}omparisons},
-	Year = {2003}}
-	
-@misc{Bellet13,
-    title={A Survey on Metric Learning for Feature Vectors and Structured Data},
-    author={Aurélien Bellet and Amaury Habrard and Marc Sebban},
-    year={2013},
-    eprint={1306.6709},
-    archivePrefix={arXiv},
-    primaryClass={cs.LG}
-}
 
 @book{Bellet15,
   Author = {Aur\'elien Bellet and Amaury Habrard and Marc Sebban},
@@ -49,49 +35,6 @@
  pages={2825--2830},
  year={2011}
 }
-
-@inproceedings{sklearn_api,
-  author    = {Lars Buitinck and Gilles Louppe and Mathieu Blondel and
-               Fabian Pedregosa and Andreas Mueller and Olivier Grisel and
-               Vlad Niculae and Peter Prettenhofer and Alexandre Gramfort
-               and Jaques Grobler and Robert Layton and Jake VanderPlas and
-               Arnaud Joly and Brian Holt and Ga{\"{e}}l Varoquaux},
-  title     = {{API} design for machine learning software: experiences from the scikit-learn
-               project},
-  booktitle = {ECML PKDD Workshop: Languages for Data Mining and Machine Learning},
-  year      = {2013},
-  pages = {108--122},
-}
-
-
-@misc{skggm,
-  author       = {Jason Laska and
-                  Manjari Narayan},
-  title        = {{skggm 0.2.7: A scikit-learn compatible package for 
-                   Gaussian and related Graphical Models}},
-  month        = jul,
-  year         = 2017,
-  doi          = {10.5281/zenodo.830033},
-  url          = {https://doi.org/10.5281/zenodo.830033}
-}
-
-
-@inproceedings{Law13,
- author = {Law, Marc T. and Thome, Nicolas and Cord, Matthieu},
- title = {{Quadruplet-Wise Image Similarity Learning}},
- booktitle = {Proceedings of the 2013 IEEE International Conference on Computer Vision},
- series = {ICCV '13},
- year = {2013},
- isbn = {978-1-4799-2840-8},
- pages = {249--256},
- numpages = {8},
- url = {http://dx.doi.org/10.1109/ICCV.2013.38},
- doi = {10.1109/ICCV.2013.38},
- acmid = {2587202},
- publisher = {IEEE Computer Society},
- address = {Washington, DC, USA},
- keywords = {metric learning, machine learning},
-} 
 
 @article{Weinberger09,
  author = {Weinberger, Kilian Q. and Saul, Lawrence K.},
@@ -162,35 +105,6 @@ title={{Metric Learning from Relative Comparisons by Minimizing Squared Residual
 year={2012}
 }
 
-@article{Kulis13,
-  added-at = {2018-05-15T20:31:27.000+0200},
-  author = {Kulis, Brian and others},
-  biburl = {https://www.bibsonomy.org/bibtex/29dde055004ee6c0b32de4b319d15e4ce/becker},
-  interhash = {e87b3f10594dbee9f54bc549486f87ec},
-  intrahash = {9dde055004ee6c0b32de4b319d15e4ce},
-  journal = {Foundations and Trends{\textregistered} in Machine Learning},
-  keywords = {metric learning deepscan survey review citedby:scholar:count:364 citedby:scholar:timestamp:2018-5-15},
-  number = 4,
-  pages = {287--364},
-  publisher = {Now Publishers, Inc.},
-  timestamp = {2018-05-15T20:31:27.000+0200},
-  title = {{Metric learning: A survey}},
-  volume = 5,
-  year = 2013
-}
-
-
-
-@misc{Surez18,
-    title={A Tutorial on Distance Metric Learning: Mathematical Foundations, Algorithms and Software},
-    author={Juan Luis Suárez and Salvador García and Francisco Herrera},
-    year={2018},
-    eprint={1812.05944},
-    archivePrefix={arXiv},
-    primaryClass={cs.LG}
-}
-
-
 @InProceedings{Weinberger07,
   title = 	 {{Metric Learning for Kernel Regression}},
   author = 	 {Kilian Q. Weinberger and Gerald Tesauro},
@@ -208,14 +122,14 @@ year={2012}
 }
 
 @inproceedings{Shi15,
-  title={Sparse compositional metric learning},
+  title= {{Sparse Compositional Metric Learning}},
   author={Shi, Yuan and Bellet, Aur{\'e}lien and Sha, Fei},
   booktitle={AAAI},
   year={2014}
 }
 
 @inproceedings{pytorch,
-title = {PyTorch: An Imperative Style, High-Performance Deep Learning Library},
+title = {{PyTorch: An Imperative Style, High-Performance Deep Learning Library}},
 author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and Kopf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
 booktitle = {NeurIPS},
 year = {2019}
@@ -229,4 +143,13 @@ year = {2019}
   author = {Yuan Tang and Tao Gao and Nan Xiao},
   title = {dml: Distance Metric Learning in {R}},
   journal = {Journal of Open Source Software}
+}
+
+@article{pyDML,
+  year = {2020},
+  volume = {96},
+  pages = {1--7},
+  author = {Juan Luis Suárez and Salvador García and Francisco Herrera},
+  title = {{pyDML: A Python Library for Distance Metric Learning}},
+  journal = {Journal of Machine Learning Research}
 }
